--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-leaflet": "^4.2.1",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.21.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-youtube": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
